# jslog4kube

./: .gitignore  AUTHORS.txt  Justfile  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
jslog4kube/: __init__.py  bootstrap.py  constants.py
jslog4kube/gunicorn/: dictconfig_logger.py
jslog4kube/kube/: log_config.py  metadata_injector.py
